@@ -43,8 +43,9 @@ public class IndexPlatform {
 
 	@ExpectPlatform public static boolean isFakePlayer(Player player) { throw new AssertionError(); }
 
-	// TODO: remove when updated to 0.5.1.e
+	// TODO: remove when Fabric updated to 0.5.1.e
 	@ExpectPlatform public static boolean layeredCannonClockStackCheck(TransportedItemStack stack) { throw new AssertionError(); }
+	@ExpectPlatform public static void layeredCannonClockStackCallback(TransportedItemStack stack) { throw new AssertionError(); }
 
 	@ExpectPlatform
 	public static AbstractCannonDrillBlockEntity makeDrill(BlockEntityType<?> type, BlockPos pos, BlockState state) {
